<resources>
    <string name="app_name">Wulkanowy</string>

    <!--Activity/Fragment title-->
    <string name="login_title">Select student</string>
    <string name="main_title">Wulkanowy</string>
    <string name="grade_title">Grades</string>
    <string name="attendance_title">Attendance</string>
    <string name="exam_title">Exams</string>
    <string name="timetable_title">Timetable</string>
    <string name="settings_title">Settings</string>
    <string name="more_title">More</string>


    <!--Login form-->
    <string name="login_header_default">Sign in with the student or parent account</string>
    <string name="login_header_symbol">Enter the VULCAN diary symbol</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_symbol_hint">Symbol</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_progress">Logging in&#8230;</string>
    <string name="login_sync">Synchronization&#8230;</string>
    <string name="login_invalid_email">This email address is invalid</string>
    <string name="login_invalid_password">This password is too short</string>
    <string name="login_incorrect_password">This password is incorrect</string>
    <string name="login_incorrect_symbol">Student not found. Check the symbol</string>
    <string name="login_field_required">This field is required</string>


    <!--Grade-->
    <string name="grade_header">Grade</string>
    <string name="grade_semester">Semester %d</string>
    <string name="grade_switch_semester">Change semester</string>
    <string name="grade_no_items">No grades</string>
    <string name="grade_weight">Weight</string>
    <string name="grade_no_new_items">No new grades</string>
    <string name="grade_number_new_items">Number of new ratings: %1$d</string>
    <string name="grade_average">Average: %1$.2f</string>
    <string name="grade_no_average">No average</string>
    <string name="grade_predicted">Predicted: %1$s</string>
    <string name="grade_final">Final: %1$s</string>
    <string name="grade_summary_calculated_average">Calculated average</string>
    <string name="grade_summary_predicted_average">Predicted average</string>
    <string name="grade_summary_final_average">Final average</string>
    <string name="grade_menu_summary">Summary</string>
    <plurals name="grade_number_item">
        <item quantity="one">%d grade</item>
        <item quantity="other">%d grades</item>
    </plurals>

    <plurals name="grade_new_items">
        <item quantity="one">New grade</item>
        <item quantity="other">New grades</item>
    </plurals>


    <!--Timetable-->
    <string name="timetable_lesson">Lesson</string>
    <string name="timetable_room">Room %s</string>
    <string name="timetable_group">Group</string>
    <string name="timetable_time">Hours</string>
    <string name="timetable_changes">Changes</string>
    <string name="timetable_no_items">No lesson in this week</string>


    <!--Attendance-->
    <string name="attendance_absence_school">Absent for school reasons</string>
    <string name="attendance_absence_excused">Excused absence</string>
    <string name="attendance_absence_unexcused">Unexcused absence</string>
    <string name="attendance_exemption">Exemption</string>
    <string name="attendance_excused_lateness">Excused lateness</string>
    <string name="attendance_unexcused_lateness">Unexcused lateness</string>
    <string name="attendance_present">Present</string>
    <string name="attendance_number">Number of lesson</string>
    <string name="attendance_no_items">No entries</string>
    <plurals name="attendance_number_absences">
        <item quantity="one">%1$d absence</item>
        <item quantity="other">%1$d absences</item>
    </plurals>


    <!--Exam-->
    <string name="exam_no_items">No exams in this week</string>
    <string name="exam_type">Type</string>
    <string name="exam_entry_date">Entry date</string>


    <!--Generic-->
    <string name="all_description">Description</string>
    <string name="all_no_description">No description</string>
    <string name="all_teacher">Teacher</string>
    <string name="all_date">Date</string>
    <string name="all_color">Color</string>
    <string name="all_details">Details</string>
    <string name="all_close">Close</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_no_data">No data</string>
    <string name="all_subject">Subject</string>


    <!--Timetable Widget-->
    <string name="widget_timetable_no_items">No lesson</string>
    <string name="widget_timetable_today">Today</string>
    <string name="widget_timetable_tomorrow">Tomorrow</string>


    <!--Preferences-->
    <string name="pref_view_header">View</string>
    <string name="pref_view_list">Default view</string>
    <string name="pref_view_summary">Show the summary in the grades</string>
    <string name="pref_view_present">Show presence in attendance</string>
    <string name="pref_view_theme_dark">Dark theme (Beta)</string>

    <string name="pref_notify_header">Notifications</string>
    <string name="pref_notify_switch">Show notifications</string>

    <string name="pref_services_header">Services</string>
    <string name="pref_services_switch">Automatic update</string>
    <string name="pref_services_suspended">Suspended on holiday</string>
    <string name="pref_services_interval">Updates interval</string>
    <string name="pref_services_wifi">Only WiFi</string>

    <string name="pref_about_description">About Wulkanowy</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_about_osl">Open source licences</string>
    <string name="pref_about_osl_summary">License details for open source software</string>
    <string name="pref_about_support">Source code &amp; feedback</string>

    <string name="about_programmer_step1">No, you will not become a programmer!</string>
    <string name="about_programmer_step2">You must try harder!</string>
    <string name="about_programmer_step3">Click a few more times</string>
    <string name="about_programmer_description">Visit the Source code tab and show how good a programmer you are!</string>

    <string name="pref_restart">Restart required</string>


    <!--Grade notify-->
    <string name="notify_grade_chanell">New grades</string>
    <plurals name="notify_grade_new_items">
        <item quantity="one">You received %1$d grade</item>
        <item quantity="other">You received %1$d grades</item>
    </plurals>


    <!--Colors-->
    <string name="all_black">Black</string>
    <string name="all_red">Red</string>
    <string name="all_blue">Blue</string>
    <string name="all_green">Green</string>
    <string name="all_empty_color">No color</string>


    <!--Others-->
    <string name="all_no_internet">No internet connection</string>
    <string name="all_sync_finish">Synchronization complete</string>
    <string name="all_sync_fail">There was an error during synchronization</string>
    <string name="all_timeout">Too long wait for connection</string>
    <string name="all_login_failed">Login is failed. Try again or restart the app</string>
</resources>
